@@ -1,3 +1,11 @@
+2004-10-15  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/unix/sysv/linux/alpha/register-dump.h: New file.
+	* sysdeps/unix/sysv/linux/alpha/sigcontextinfo.h (SIGCONTEXT): Add
+	_code argument, pass sigcontext by pointer.
+	(SIGCONTEXT_EXTRA_ARGS): Likewise.
+	(GET_PC, GET_FRAME, GET_STACK): Expect ctx as pointer.
+
 2004-10-14  Richard Henderson  <rth@redhat.com>
 
 	* sysdeps/alpha/dl-machine.h (elf_machine_rela,
